Added ruff formatting to all tutorial notebooks and fixed issues

--- a/docs/source/tomography/state_tomography.ipynb
+++ b/docs/source/tomography/state_tomography.ipynb
@@ -16,12 +16,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "import lightworks as lw\n",
     "from lightworks import emulator, qubit\n",
-    "from lightworks.tomography import StateTomography, density_from_state\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "from lightworks.tomography import StateTomography, density_from_state"
    ]
   },
   {
@@ -40,30 +40,30 @@
     "def plot_density_matrix(rho: np.ndarray) -> tuple:\n",
     "    \"\"\"\n",
     "    General function for plotting a density matrix. It will split up and plot\n",
-    "    the real and imaginary components using a common colorbar between them. \n",
+    "    the real and imaginary components using a common colorbar between them.\n",
     "    \"\"\"\n",
     "    # Find plot range\n",
     "    vmin = min(np.real(rho).min(), np.imag(rho).min())\n",
     "    vmax = max(np.real(rho).max(), np.imag(rho).max())\n",
-    "    \n",
+    "\n",
     "    # Create figure\n",
-    "    fig, ax = plt.subplots(1, 2, figsize = (12, 5))\n",
+    "    fig, ax = plt.subplots(1, 2, figsize=(12, 5))\n",
     "    ax[0].imshow(np.real(rho), vmin=vmin, vmax=vmax)\n",
-    "    ax[0].set_title(\"Re(\\u03C1)\")\n",
+    "    ax[0].set_title(\"Re(\\u03c1)\")\n",
     "    im = ax[1].imshow(np.imag(rho), vmin=vmin, vmax=vmax)\n",
-    "    ax[1].set_title(\"Im(\\u03C1)\")\n",
+    "    ax[1].set_title(\"Im(\\u03c1)\")\n",
     "    fig.colorbar(im, ax=ax.ravel().tolist())\n",
-    "    \n",
+    "\n",
     "    # Set ticks as integer values and create state labels\n",
     "    ticks = range(rho.shape[0])\n",
     "    n_qubits = int(np.log2(len(ticks)))\n",
     "    basis = [\"0\", \"1\"]\n",
     "    labels = list(basis)\n",
-    "    for i in range(n_qubits-1):\n",
+    "    for _ in range(n_qubits - 1):\n",
     "        labels = [q1 + q2 for q1 in labels for q2 in basis]\n",
     "    for i in range(2):\n",
-    "        ax[i].set_xticks(ticks, labels = labels)\n",
-    "        ax[i].set_yticks(ticks, labels = labels)\n",
+    "        ax[i].set_xticks(ticks, labels=labels)\n",
+    "        ax[i].set_yticks(ticks, labels=labels)\n",
     "\n",
     "    return (fig, ax)"
    ]
@@ -107,7 +107,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2600b1cc690>"
+       "<drawsvg.drawing.Drawing at 0x16ca86edbd0>"
       ]
      },
      "metadata": {},
@@ -135,19 +135,19 @@
     "def experiment_1q(circuits: list[lw.Circuit]) -> list:\n",
     "    \"\"\"\n",
     "    Experiment function which is required for performing state tomography on a\n",
-    "    system. It takes a list of circuits and generates a corresponding list of \n",
+    "    system. It takes a list of circuits and generates a corresponding list of\n",
     "    results for each of them. Only supports one qubit systems currently.\n",
     "    \"\"\"\n",
     "    # Post-select on 1 photon across each pair of qubit modes\n",
     "    post_select = lw.PostSelection()\n",
-    "    post_select.add((0,1), 1)\n",
-    "    \n",
+    "    post_select.add((0, 1), 1)\n",
+    "\n",
     "    # Generate results and return\n",
     "    results = []\n",
     "    for circ in circuits:\n",
-    "        sampler = emulator.Sampler(circ, lw.State([1,0]))\n",
-    "        results.append(sampler.sample_N_outputs(\n",
-    "            10000, seed=11, post_select=post_select)\n",
+    "        sampler = emulator.Sampler(circ, lw.State([1, 0]))\n",
+    "        results.append(\n",
+    "            sampler.sample_N_outputs(10000, seed=11, post_select=post_select)\n",
     "        )\n",
     "    return results"
    ]
@@ -242,7 +242,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x260357a5d50>"
+       "<drawsvg.drawing.Drawing at 0x16cd2c33390>"
       ]
      },
      "metadata": {},
@@ -370,7 +370,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x260358624d0>"
+       "<drawsvg.drawing.Drawing at 0x16cd2c76450>"
       ]
      },
      "metadata": {},
@@ -380,7 +380,7 @@
    "source": [
     "n_qubits = 2\n",
     "\n",
-    "bell_circuit = lw.Circuit(2*n_qubits)\n",
+    "bell_circuit = lw.Circuit(2 * n_qubits)\n",
     "bell_circuit.add(qubit.H())\n",
     "bell_circuit.add(qubit.CNOT())\n",
     "\n",
@@ -405,11 +405,10 @@
     "    Runs experiment using the emulator Sampler for a given n_qubits with an\n",
     "    optional imperfect single photon source.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    def __init__(\n",
     "        self, n_qubits: int, source: emulator.Source | None = None\n",
     "    ) -> None:\n",
-    "        \n",
     "        self.n_qubits = n_qubits\n",
     "        self.source = source\n",
     "        self.n_samples = 10000\n",
@@ -417,23 +416,27 @@
     "\n",
     "    def experiment(self, circuits: list[lw.Circuit]) -> list:\n",
     "        \"\"\"\n",
-    "        Generalised version of experiment function above, designed for any \n",
+    "        Generalised version of experiment function above, designed for any\n",
     "        number of qubits. It is assumes the provided circuits contain dual-rail\n",
     "        encoded qubits across pairs of adjacent modes.\n",
     "        \"\"\"\n",
     "        # Post-select on 1 photon across each pair of qubit modes\n",
     "        post_select = lw.PostSelection()\n",
     "        for i in range(self.n_qubits):\n",
-    "            post_select.add((2*i, 2*i+1), 1)\n",
-    "        \n",
+    "            post_select.add((2 * i, 2 * i + 1), 1)\n",
+    "\n",
     "        # Generate results and return\n",
     "        results = []\n",
     "        for circ in circuits:\n",
     "            sampler = emulator.Sampler(\n",
-    "                circ, lw.State([1,0]*self.n_qubits), source=self.source\n",
+    "                circ, lw.State([1, 0] * self.n_qubits), source=self.source\n",
     "            )\n",
-    "            results.append(sampler.sample_N_outputs(\n",
-    "                self.n_samples, seed=self.random_seed, post_select=post_select)\n",
+    "            results.append(\n",
+    "                sampler.sample_N_outputs(\n",
+    "                    self.n_samples,\n",
+    "                    seed=self.random_seed,\n",
+    "                    post_select=post_select,\n",
+    "                )\n",
     "            )\n",
     "        return results"
    ]
@@ -511,7 +514,7 @@
    "source": [
     "rho_exp = density_from_state([2**-0.5, 0, 0, 2**-0.5])\n",
     "\n",
-    "print(f\"Fidelity = {round(tomo.fidelity(rho_exp)*100, 4)} %\")"
+    "print(f\"Fidelity = {round(tomo.fidelity(rho_exp) * 100, 4)} %\")"
    ]
   },
   {
@@ -530,7 +533,7 @@
    "source": [
     "source = emulator.Source(indistinguishability=0.95, purity=0.99)\n",
     "\n",
-    "imperfect_exp = SamplerExperiment(2, source = source)"
+    "imperfect_exp = SamplerExperiment(2, source=source)"
    ]
   },
   {
@@ -568,7 +571,7 @@
     "\n",
     "rho = tomo.process()\n",
     "\n",
-    "print(f\"Fidelity = {round(tomo.fidelity(rho_exp)*100, 4)} %\")\n",
+    "print(f\"Fidelity = {round(tomo.fidelity(rho_exp) * 100, 4)} %\")\n",
     "\n",
     "plot_density_matrix(rho)\n",
     "plt.show()"
