--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -16,10 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lightworks as lw\n",
+    "import numpy as np\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import lightworks as lw"
    ]
   },
   {
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +82,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c95e8190>"
+       "<drawsvg.drawing.Drawing at 0x1220c4432d0>"
       ]
      },
      "metadata": {},
@@ -93,7 +92,7 @@
    "source": [
     "circuit = lw.Circuit(4)\n",
     "\n",
-    "# Beam splitters \n",
+    "# Beam splitters\n",
     "circuit.bs(0)\n",
     "circuit.bs(2)\n",
     "\n",
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +176,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c95f2510>"
+       "<drawsvg.drawing.Drawing at 0x12261d99610>"
       ]
      },
      "metadata": {},
@@ -187,7 +186,7 @@
    "source": [
     "# Map mode 0 -> 2, 2 -> 3 & 3 -> 0\n",
     "\n",
-    "circuit.mode_swaps({0:2, 2:3, 3:0})\n",
+    "circuit.mode_swaps({0: 2, 2: 3, 3: 0})\n",
     "\n",
     "circuit.display()"
    ]
@@ -203,12 +202,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add loss through beam splitter\n",
-    "circuit.bs(1, loss = 0.1)\n",
+    "circuit.bs(1, loss=0.1)\n",
     "\n",
     "# Add directly\n",
     "circuit.loss(0, 0.3)"
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +308,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c6987710>"
+       "<drawsvg.drawing.Drawing at 0x1220c443650>"
       ]
      },
      "metadata": {},
@@ -317,7 +316,7 @@
     }
    ],
    "source": [
-    "circuit.display(display_loss = True)"
+    "circuit.display(display_loss=True)"
    ]
   },
   {
@@ -331,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +415,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244a2c13a10>"
+       "<drawsvg.drawing.Drawing at 0x1220c443490>"
       ]
      },
      "metadata": {},
@@ -426,8 +425,8 @@
    "source": [
     "ref = lw.Parameter(0.2)\n",
     "\n",
-    "circuit.bs(0, reflectivity = ref)\n",
-    "circuit.bs(2, reflectivity = ref)\n",
+    "circuit.bs(0, reflectivity=ref)\n",
+    "circuit.bs(2, reflectivity=ref)\n",
     "\n",
     "circuit.display()"
    ]
@@ -441,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +525,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c95f2c90>"
+       "<drawsvg.drawing.Drawing at 0x1220c459ad0>"
       ]
      },
      "metadata": {},
@@ -550,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +695,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c95db950>"
+       "<drawsvg.drawing.Drawing at 0x1220c469250>"
       ]
      },
      "metadata": {},
@@ -705,14 +704,14 @@
    ],
    "source": [
     "# Add the created circuit to itself\n",
-    "new_circuit =  circuit + circuit\n",
+    "new_circuit = circuit + circuit\n",
     "\n",
     "new_circuit.display()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +770,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c95e8dd0>"
+       "<drawsvg.drawing.Drawing at 0x1220c46d610>"
       ]
      },
      "metadata": {},
@@ -897,7 +896,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c6f09750>"
+       "<drawsvg.drawing.Drawing at 0x12261d8c410>"
       ]
      },
      "metadata": {},
@@ -911,7 +910,7 @@
     "circuit2.bs(1)\n",
     "circuit2.ps(1, 0.6)\n",
     "circuit2.bs(1)\n",
-    "circuit2.mode_swaps({0:1, 1:2, 2:0})\n",
+    "circuit2.mode_swaps({0: 1, 1: 2, 2: 0})\n",
     "\n",
     "print(\"Sub-circuit:\")\n",
     "circuit2.display()\n",
@@ -932,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +939,7 @@
       "image/svg+xml": [
        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
-       "     width=\"686.0\" height=\"245.0\" viewBox=\"0 0 1750.0 625\">\n",
+       "     width=\"868.0\" height=\"310.0\" viewBox=\"0 0 1750.0 625\">\n",
        "<defs>\n",
        "</defs>\n",
        "<rect x=\"0\" y=\"0\" width=\"1750.0\" height=\"625\" fill=\"white\" stroke=\"none\" />\n",
@@ -1059,7 +1058,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c95f0e50>"
+       "<drawsvg.drawing.Drawing at 0x1220c46f290>"
       ]
      },
      "metadata": {},
@@ -1083,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1090,7 @@
       "image/svg+xml": [
        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
-       "     width=\"871.3692307692307\" height=\"271.0\" viewBox=\"0 0 2090.0 650\">\n",
+       "     width=\"1080.3692307692309\" height=\"336.0\" viewBox=\"0 0 2090.0 650\">\n",
        "<defs>\n",
        "</defs>\n",
        "<rect x=\"0\" y=\"0\" width=\"2090.0\" height=\"650\" fill=\"white\" stroke=\"none\" />\n",
@@ -1224,7 +1223,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c95f2090>"
+       "<drawsvg.drawing.Drawing at 0x1220c326cd0>"
       ]
      },
      "metadata": {},
@@ -1250,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1257,7 @@
       "image/svg+xml": [
        "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
-       "     width=\"954.7538461538461\" height=\"271.0\" viewBox=\"0 0 2290.0 650\">\n",
+       "     width=\"1183.753846153846\" height=\"336.0\" viewBox=\"0 0 2290.0 650\">\n",
        "<defs>\n",
        "</defs>\n",
        "<rect x=\"0\" y=\"0\" width=\"2290.0\" height=\"650\" fill=\"white\" stroke=\"none\" />\n",
@@ -1400,7 +1399,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x244c95cf450>"
+       "<drawsvg.drawing.Drawing at 0x1220c46f290>"
       ]
      },
      "metadata": {},
@@ -1409,7 +1408,7 @@
    ],
    "source": [
     "U = lw.random_unitary(3)\n",
-    "unitary = lw.Unitary(U, label = \"U\")\n",
+    "unitary = lw.Unitary(U, label=\"U\")\n",
     "\n",
     "circuit.add(unitary, 1)\n",
     "circuit.display()"
