Ruff docs expansion (#96)
* Added ruff formatting to all tutorial notebooks and fixed issues

* Added automatic re-build of docs on the 2nd of Jan each year

* Fixed process tomography execution counts

--- a/docs/source/tomography/process_tomography.ipynb
+++ b/docs/source/tomography/process_tomography.ipynb
@@ -16,16 +16,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
     "import lightworks as lw\n",
     "from lightworks import emulator, qubit\n",
     "from lightworks.tomography import (\n",
-    "    LIProcessTomography, \n",
-    "    MLEProcessTomography, \n",
-    "    choi_from_unitary\n",
-    ")\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "    LIProcessTomography,\n",
+    "    MLEProcessTomography,\n",
+    "    choi_from_unitary,\n",
+    ")"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "def plot_choi_matrix(choi: np.ndarray) -> tuple:\n",
     "    \"\"\"\n",
     "    General function for plotting a choi matrix. It will split up and plot\n",
-    "    the real and imaginary components using a common colorbar between them. \n",
+    "    the real and imaginary components using a common colorbar between them.\n",
     "    \"\"\"\n",
     "    # Create required plotting data\n",
     "    _xx, _yy = np.meshgrid(range(choi.shape[0]), range(choi.shape[1]))\n",
@@ -53,16 +53,16 @@
     "    h1 = np.real(choi).flatten()\n",
     "    h2 = np.imag(choi).flatten()\n",
     "    base = np.zeros_like(h1)\n",
-    "    \n",
+    "\n",
     "    # Create figure\n",
     "    fig = plt.figure(figsize=(11, 5))\n",
-    "    ax1 = fig.add_subplot(121, projection='3d')\n",
-    "    ax2 = fig.add_subplot(122, projection='3d')\n",
-    "    \n",
+    "    ax1 = fig.add_subplot(121, projection=\"3d\")\n",
+    "    ax2 = fig.add_subplot(122, projection=\"3d\")\n",
+    "\n",
     "    # Plot bar charts\n",
-    "    ax1.bar3d(x, y, base, width, depth, h1, shade = True)\n",
+    "    ax1.bar3d(x, y, base, width, depth, h1, shade=True)\n",
     "    ax1.set_title(\"Re(C)\")\n",
-    "    ax2.bar3d(x, y, base, width, depth, h2, shade = True)\n",
+    "    ax2.bar3d(x, y, base, width, depth, h2, shade=True)\n",
     "    ax2.set_title(\"Im(C)\")\n",
     "    for ax in [ax1, ax2]:\n",
     "        ax.set_zlim(-1, 1)\n",
@@ -91,20 +91,20 @@
     "def experiment(circuits: list[lw.Circuit], inputs: list[lw.State]) -> list:\n",
     "    \"\"\"\n",
     "    Experiment function which is required for performing state tomography on a\n",
-    "    system. It takes a list of circuits and generates a corresponding list of \n",
+    "    system. It takes a list of circuits and generates a corresponding list of\n",
     "    results for each of them. Only supports one qubit systems currently.\n",
     "    \"\"\"\n",
     "    # Post-select on 1 photon across each pair of qubit modes\n",
     "    post_select = lw.PostSelection()\n",
-    "    post_select.add((0,1), 1)\n",
-    "    post_select.add((2,3), 1)\n",
-    "    \n",
+    "    post_select.add((0, 1), 1)\n",
+    "    post_select.add((2, 3), 1)\n",
+    "\n",
     "    # Generate results and return\n",
     "    results = []\n",
     "    for circ, in_s in zip(circuits, inputs):\n",
     "        sampler = emulator.Sampler(circ, in_s)\n",
-    "        results.append(sampler.sample_N_outputs(\n",
-    "            10000, seed=98, post_select=post_select)\n",
+    "        results.append(\n",
+    "            sampler.sample_N_outputs(10000, seed=98, post_select=post_select)\n",
     "        )\n",
     "    return results"
    ]
@@ -168,7 +168,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x25e39530d90>"
+       "<drawsvg.drawing.Drawing at 0x21e2cb65850>"
       ]
      },
      "metadata": {},
@@ -259,8 +259,10 @@
     }
    ],
    "source": [
-    "choi_exp = choi_from_unitary([[1,0,0,0],[0,1,0,0],[0,0,0,1],[0,0,1,0]])\n",
-    "print(f\"Fidelity = {round(li_tomo.fidelity(choi_exp)*100, 4)} %\")"
+    "choi_exp = choi_from_unitary(\n",
+    "    [[1, 0, 0, 0], [0, 1, 0, 0], [0, 0, 0, 1], [0, 0, 1, 0]]\n",
+    ")\n",
+    "print(f\"Fidelity = {round(li_tomo.fidelity(choi_exp) * 100, 4)} %\")"
    ]
   },
   {
@@ -313,7 +315,7 @@
     }
    ],
    "source": [
-    "print(f\"Fidelity = {round(mle_tomo.fidelity(choi_exp)*100, 4)} %\")\n",
+    "print(f\"Fidelity = {round(mle_tomo.fidelity(choi_exp) * 100, 4)} %\")\n",
     "\n",
     "plot_choi_matrix(choi)\n",
     "plt.show()"
@@ -340,35 +342,38 @@
     "    Runs experiment using the emulator Sampler for a given n_qubits with an\n",
     "    optional imperfect single photon source.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    def __init__(\n",
     "        self, n_qubits: int, source: emulator.Source | None = None\n",
     "    ) -> None:\n",
-    "        \n",
     "        self.n_qubits = n_qubits\n",
     "        self.source = source\n",
     "        self.n_samples = 25000\n",
     "        self.random_seed = 123\n",
     "\n",
-    "    def experiment(self, circuits: list[lw.Circuit], inputs: list[lw.State]) -> list:\n",
+    "    def experiment(\n",
+    "        self, circuits: list[lw.Circuit], inputs: list[lw.State]\n",
+    "    ) -> list:\n",
     "        \"\"\"\n",
-    "        Generalised version of experiment function above, designed for any \n",
+    "        Generalised version of experiment function above, designed for any\n",
     "        number of qubits. It is assumes the provided circuits contain dual-rail\n",
     "        encoded qubits across pairs of adjacent modes.\n",
     "        \"\"\"\n",
     "        # Post-select on 1 photon across each pair of qubit modes\n",
     "        post_select = lw.PostSelection()\n",
     "        for i in range(self.n_qubits):\n",
-    "            post_select.add((2*i, 2*i+1), 1)\n",
-    "        \n",
+    "            post_select.add((2 * i, 2 * i + 1), 1)\n",
+    "\n",
     "        # Generate results and return\n",
     "        results = []\n",
     "        for circ, in_s in zip(circuits, inputs):\n",
-    "            sampler = emulator.Sampler(\n",
-    "                circ, in_s, source=self.source\n",
-    "            )\n",
-    "            results.append(sampler.sample_N_outputs(\n",
-    "                self.n_samples, seed=self.random_seed, post_select=post_select)\n",
+    "            sampler = emulator.Sampler(circ, in_s, source=self.source)\n",
+    "            results.append(\n",
+    "                sampler.sample_N_outputs(\n",
+    "                    self.n_samples,\n",
+    "                    seed=self.random_seed,\n",
+    "                    post_select=post_select,\n",
+    "                )\n",
     "            )\n",
     "        return results"
    ]
@@ -426,7 +431,7 @@
     "\n",
     "choi = mle_tomo_2.process()\n",
     "\n",
-    "print(f\"Fidelity = {round(mle_tomo_2.fidelity(choi_exp)*100, 4)} %\")\n",
+    "print(f\"Fidelity = {round(mle_tomo_2.fidelity(choi_exp) * 100, 4)} %\")\n",
     "\n",
     "plot_choi_matrix(choi)\n",
     "plt.show()"
