--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -29,4 +29,18 @@
     author={Knill, E and Laflamme, R and Milburn, G J}, 
     year={2001}, 
     month={Jan}
-} 
+}
+
+@article{Nielsen_2002,
+   title={A simple formula for the average gate fidelity of a quantum dynamical operation},
+   volume={303},
+   ISSN={0375-9601},
+   url={http://dx.doi.org/10.1016/S0375-9601(02)01272-0},
+   DOI={10.1016/s0375-9601(02)01272-0},
+   number={4},
+   journal={Physics Letters A},
+   publisher={Elsevier BV},
+   author={Nielsen, Michael A},
+   year={2002},
+   month=oct, pages={249-252} 
+}
