--- a/docs/source/tomography/process_tomography.ipynb
+++ b/docs/source/tomography/process_tomography.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Process Tomography\n",
-    "Process tomography allows for the characterisation of a quantum process $\\varepsilon$, where $\\varepsilon(\\rho) = \\rho^\\prime$. This is very useful when assessing the exact operation of different quantum gates and can be used for the assessment of gate fidelities.\n",
+    "Process tomography allows for the characterisation of a quantum process $\\mathcal{E}$, where $\\mathcal{E}(\\rho) = \\rho^\\prime$. This is very useful when assessing the exact operation of different quantum gates and can be used for the assessment of gate fidelities.\n",
     "\n",
     "This notebook demonstates the utilisation of the different process tomography algorithms included within Lightworks. In each the choi matrix is found and used as a characterisation of the quantum process which occured."
    ]
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear inversion\n",
+    "## Linear Inversion\n",
     "This method is achieved with the LIProcessTomography object. To initialise this, the number of qubits, circuit & experiment function are provided. The choi matrix can then be calculated using the process method."
    ]
   },
