Added ref for process tomography

--- a/docs/source/tomography/gate_fidelity.ipynb
+++ b/docs/source/tomography/gate_fidelity.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Average Gate Fidelity\n",
-    "Instead of performing process tomography on a system, it is possible to use a series of state tomographies and calculate an average gate fidelity from the measured density matices. To achieve this, the following equation can be used <cite data-cite=\"Nielsen_2002\">(AA2010)</cite>:\n",
+    "Instead of performing process tomography on a system, it is possible to use a series of state tomographies and calculate an average gate fidelity from the measured density matices. To achieve this, the following equation can be used <cite data-cite=\"Nielsen_2002\">(Nielsen_2002)</cite>:\n",
     "\n",
     "$\\begin{equation}\\overline{F}(\\mathcal{E}, U) = \\frac{\\sum_{jk}\\alpha_{jk}tr(UU_j^{\\dagger}U^{\\dagger}\\mathcal{E}(\\rho_k))+d^2}{d^2(d+1)}\\end{equation},$\n",
     "\n",
