--- a/docs/source/tomography/process_tomography.ipynb
+++ b/docs/source/tomography/process_tomography.ipynb
@@ -270,6 +270,8 @@
    "metadata": {},
    "source": [
     "## Maximum Likelihood Estimation\n",
+    "The pgdB algorithm from <cite data-cite=\"Knee_2018\">(Knee_2018)</cite> is used for the projection and fitting of the choi matrix through maximum likelihood estimation.\n",
+    "\n",
     "This method is implemented using the MLEProcessTomography object and utilised in the same way as above."
    ]
   },
