--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -44,3 +44,17 @@
    year={2002},
    month=oct, pages={249-252} 
 }
+
+@article{Knee_2018,
+   title={Quantum process tomography via completely positive and trace-preserving projection},
+   volume={98},
+   ISSN={2469-9934},
+   url={http://dx.doi.org/10.1103/PhysRevA.98.062336},
+   DOI={10.1103/physreva.98.062336},
+   number={6},
+   journal={Physical Review A},
+   publisher={American Physical Society (APS)},
+   author={Knee, George C. and Bolduc, Eliot and Leach, Jonathan and Gauger, Erik M.},
+   year={2018},
+   month=dec
+}
