Average gate fidelity (#98)
* Moved tomography density matrix calculation into separate file.

* Initial framework for calculation of average gate fidelity.
- This currently just averages across all state fidelities, instead of performing the full calculation.

* Working implementation of average gate fidelity calculation

* Improved and simplified average gate fidelity calculation

* Fixed mypy issues

* Added fidelity property + unit tests

* Average gate fidelity documentation

* Added ref for process tomography

* Missing gate fidelity in docs reference

* Switched some utils function to private and increased usage of vec/unvec

--- a/docs/source/tomography/process_tomography.ipynb
+++ b/docs/source/tomography/process_tomography.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Process Tomography\n",
-    "Process tomography allows for the characterisation of a quantum process $\\varepsilon$, where $\\varepsilon(\\rho) = \\rho^\\prime$. This is very useful when assessing the exact operation of different quantum gates and can be used for the assessment of gate fidelities.\n",
+    "Process tomography allows for the characterisation of a quantum process $\\mathcal{E}$, where $\\mathcal{E}(\\rho) = \\rho^\\prime$. This is very useful when assessing the exact operation of different quantum gates and can be used for the assessment of gate fidelities.\n",
     "\n",
     "This notebook demonstates the utilisation of the different process tomography algorithms included within Lightworks. In each the choi matrix is found and used as a characterisation of the quantum process which occured."
    ]
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear inversion\n",
+    "## Linear Inversion\n",
     "This method is achieved with the LIProcessTomography object. To initialise this, the number of qubits, circuit & experiment function are provided. The choi matrix can then be calculated using the process method."
    ]
   },
@@ -270,6 +270,8 @@
    "metadata": {},
    "source": [
     "## Maximum Likelihood Estimation\n",
+    "The pgdB algorithm from <cite data-cite=\"Knee_2018\">(Knee_2018)</cite> is used for the projection and fitting of the choi matrix through maximum likelihood estimation.\n",
+    "\n",
     "This method is implemented using the MLEProcessTomography object and utilised in the same way as above."
    ]
   },
