Removed paper links from some notebooks and replaced these with citations.

--- a/docs/source/examples/bell_state_generator.ipynb
+++ b/docs/source/examples/bell_state_generator.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Bell State Generator\n",
-    "- Examine a lossy bell-state generator, similar to that shown on page 3 of https://arxiv.org/pdf/2106.13825.pdf.\n",
+    "- Examine a lossy bell-state generator, similar to that shown in Figure 1 of <cite data-cite=\"bartolucci2021\">(bartolucci2021)</cite>.\n",
     "- First import required modules"
    ]
   },
