--- a/docs/source/examples/heralded_cnot.ipynb
+++ b/docs/source/examples/heralded_cnot.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Heralded CNOT\n",
-    "- This notebook demonstrates the operation of the Heralded CNOT gate from https://doi.org/10.1038/35051009."
+    "- This notebook demonstrates the operation of the Heralded CNOT gate from <cite data-cite=\"KLM2001\">(KLM2001)</cite>."
    ]
   },
   {
