--- a/docs/source/examples/ralph_cnot.ipynb
+++ b/docs/source/examples/ralph_cnot.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Ralph CNOT - All Simulators\n",
-    "- This notebook contains a recreation of the Ralph CNOT gate from https://arxiv.org/abs/quant-ph/0112088 and demonstrates the application of different simulation objects."
+    "- This notebook contains a recreation of the Ralph CNOT gate from <cite data-cite=\"ralph2002\">(ralph2002)</cite> and demonstrates the application of different simulation objects."
    ]
   },
   {
