Improved all other example notebooks

--- a/docs/source/examples/bell_state_generator.ipynb
+++ b/docs/source/examples/bell_state_generator.ipynb
@@ -5,8 +5,9 @@
    "metadata": {},
    "source": [
     "# Bell State Generator\n",
-    "- Examine a lossy bell-state generator, similar to that shown in Figure 1 of <cite data-cite=\"bartolucci2021\">(bartolucci2021)</cite>.\n",
-    "- First import required modules"
+    "This notebook examines a lossy bell-state generator, similar to that shown in Figure 1 of <cite data-cite=\"bartolucci2021\">(bartolucci2021)</cite>.\n",
+    "\n",
+    "First, the required modules are imported."
    ]
   },
   {
@@ -27,8 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "- The circuit for this can be built in the following way, in which modes 0-3 are the inputs, all containing a single photon and modes 4-7 are ancilla. This is not a physical circuit, and instead some re-arrangement of the modes would be required."
+    "The circuit for this can be built in the following way, in which modes 0-3 are the inputs, all containing a single photon and modes 4-7 are ancilla. This is not a physical circuit, and instead some re-arrangement of the modes would be required."
    ]
   },
   {
@@ -411,8 +411,7 @@
    "metadata": {},
    "source": [
     "## Sampling\n",
-    "- In this case, we use the heralding function to select a particular measurement outcome from the ancilla modes. \n",
-    "- We then use the min_detection option to ensure that 4 photons total leave the circuit."
+    "In this case, we use the heralding function to select a particular measurement outcome from the ancilla modes. We then use the min_detection option to ensure that 4 photons total leave the circuit."
    ]
   },
   {
@@ -431,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Choose the sample_N_inputs function to test the expected output counts after 100,000 inputs into the system."
+    "The sample_N_inputs function is then chosen to test the expected output counts after 100,000 inputs into the system."
    ]
   },
   {
@@ -456,8 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- As can be seen from the plot below, for the measurement pattern [1,1,0,0] on the ancilla modes, we usually get the states |1,0,0,1> and |0,1,1,0> across the other 4 modes, which is as expected. If we convert this to dual rail encoded qubits, then this corresponds to the state |01> + |10>, which is a bell state, showing the generator works correctly.\n",
-    "- We can also see how loss in the circuit leads to some errors presenting themselves in the operation."
+    "As can be seen from the plot below, for the measurement pattern [1,1,0,0] on the ancilla modes, we usually get the states |1,0,0,1> and |0,1,1,0> across the other 4 modes, which is as expected. If we convert this to dual rail encoded qubits, then this corresponds to the state |01> + |10>, which is a bell state, showing the generator works correctly. We can also see how loss in the circuit leads to some errors presenting themselves in the operation."
    ]
   },
   {
