--- a/docs/source/examples/heralded_cnot.ipynb
+++ b/docs/source/examples/heralded_cnot.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Heralded CNOT\n",
-    "- This notebook demonstrates the operation of the Heralded CNOT gate from <cite data-cite=\"KLM2001\">(KLM2001)</cite>."
+    "This notebook demonstrates the operation of the Heralded CNOT gate from <cite data-cite=\"KLM2001\">(KLM2001)</cite>."
    ]
   },
   {
@@ -24,8 +24,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Initial version\n",
-    "- Build an initial version of the CNOT circuit. Note that the settings as provided below requires a special convention for the beam splitters, which we access with the convention = \"H\" setting."
+    "## Layout\n",
+    "The CNOT is built from a set of known phase settings below. These settings require the beam splitter to be in the \"H\" convention"
    ]
   },
   {
@@ -79,8 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- View circuit with labelled modes. The c and t mode are the control and target qubit modes respectively, and the a and b modes are the ancillary modes required for implementation of the gate.\n",
-    "- The heralded modes can also be seen here. "
+    "Once created, the circuit can be viewed with labelled modes. The c and t mode are the control and target qubit modes respectively, and the a and b modes are the ancillary modes required for implementation of the gate. The heralded modes can also be seen here. "
    ]
   },
   {
@@ -305,7 +304,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sampling"
+    "## Sampling\n",
+    "Once created, the circuit is then simulated with the Sampler."
    ]
   },
   {
@@ -340,7 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- It can be seen that in the case of a 10 input, the most likely output is 11 (|0,1,0,1> in mode language), as expected."
+    "Once results are collected, it can be seen that in the case of a 10 input, the most likely output is 11 (|0,1,0,1> in mode language), as expected."
    ]
   },
   {
