--- a/docs/source/tomography/process_tomography.ipynb
+++ b/docs/source/tomography/process_tomography.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +47,8 @@
     "    the real and imaginary components using a common colorbar between them.\n",
     "    \"\"\"\n",
     "    # Create required plotting data\n",
-    "    _xx, _yy = np.meshgrid(range(choi.shape[0]), range(choi.shape[1]))\n",
-    "    x, y = _xx.ravel(), _yy.ravel()\n",
+    "    xx, yy = np.meshgrid(range(choi.shape[0]), range(choi.shape[1]))\n",
+    "    x, y = xx.ravel(), yy.ravel()\n",
     "    width = depth = 0.7\n",
     "    h1 = np.real(choi).flatten()\n",
     "    h2 = np.imag(choi).flatten()\n",
