Initial update pass to documentation (incomplete)

--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -82,7 +82,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1220c4432d0>"
+       "<drawsvg.drawing.Drawing at 0x2511f7c6610>"
       ]
      },
      "metadata": {},
@@ -176,7 +176,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x12261d99610>"
+       "<drawsvg.drawing.Drawing at 0x2511d43c050>"
       ]
      },
      "metadata": {},
@@ -308,7 +308,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1220c443650>"
+       "<drawsvg.drawing.Drawing at 0x2511f7c7a10>"
       ]
      },
      "metadata": {},
@@ -415,7 +415,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1220c443490>"
+       "<drawsvg.drawing.Drawing at 0x251775a5250>"
       ]
      },
      "metadata": {},
@@ -525,7 +525,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1220c459ad0>"
+       "<drawsvg.drawing.Drawing at 0x2511f7d30d0>"
       ]
      },
      "metadata": {},
@@ -695,7 +695,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1220c469250>"
+       "<drawsvg.drawing.Drawing at 0x25177616590>"
       ]
      },
      "metadata": {},
@@ -770,7 +770,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1220c46d610>"
+       "<drawsvg.drawing.Drawing at 0x2511e4b12d0>"
       ]
      },
      "metadata": {},
@@ -896,7 +896,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x12261d8c410>"
+       "<drawsvg.drawing.Drawing at 0x2511f7da810>"
       ]
      },
      "metadata": {},
@@ -1058,7 +1058,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1220c46f290>"
+       "<drawsvg.drawing.Drawing at 0x2511f7d13d0>"
       ]
      },
      "metadata": {},
@@ -1223,7 +1223,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1220c326cd0>"
+       "<drawsvg.drawing.Drawing at 0x2511f7dbb50>"
       ]
      },
      "metadata": {},
@@ -1399,7 +1399,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1220c46f290>"
+       "<drawsvg.drawing.Drawing at 0x2511f7c7110>"
       ]
      },
      "metadata": {},
