Corrected some errors in docs

--- a/docs/source/tutorials/qubit.ipynb
+++ b/docs/source/tutorials/qubit.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Qubit Components"
+    "# Qubit Components"
    ]
   },
   {
@@ -27,8 +27,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Utilising Qubit Gates\n",
-    "All qubit components are in a dedicated 'qubit' sub-module of Lightworks. To access these, we can either use the existing Lightworks import or perform a dedicated import of the qubit module. As an example, to create a hadamard gate, either of the following would be valid."
+    "## Using Qubit Gates\n",
+    "All qubit components are in a dedicated 'qubit' sub-module of Lightworks. To access these, either the existing Lightworks import or a dedicated import of the qubit module can be used. As an example, to create a hadamard gate, either of the following would be valid."
    ]
   },
   {
